[package]
name = "node-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "deeper-chain"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "deeper-chain"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
clap = { version = "4.0.9", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde_json = '1.0'
serde = { version = "1.0.136", features = ["derive"] }
futures = "0.3.21"
hex-literal = "0.3.1"
log = "0.4.17"
rand = "0.7.2"
parking_lot = "0.11.1"
async-trait = "0.1"

# primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# frontier primitives
fp-consensus = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fp-dynamic-fee = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fp-evm = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fp-rpc = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fp-storage = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-db = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-service = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# frontier client dependencies
fc-cli = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-consensus = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-rpc = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-rpc-core = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-db = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-mapping-sync = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }

# frame dependencies
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-staking = { path = "../pallets/staking", version = "3.0.0" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-deeper-node = { version = "3.0.0", path = "../pallets/deeper-node" }
pallet-credit = { version = "3.0.0", default-features = false, path = "../pallets/credit" }
pallet-micropayment = { version = "3.0.0", default-features = false, path = "../pallets/micropayment" }

# node-specific dependencies
node-runtime = { version = "2.0.0", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# CLI-specific dependencies
sc-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-benchmarking-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }

[target.'cfg(target_arch="x86_64")'.dependencies]
sc-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34"}
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false}

[dev-dependencies]
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

assert_cmd = "2.0.2"
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
nix = "0.23"
platforms = "2.0"
regex = "1.5.5"
serde_json = "1.0"
soketto = "0.7.1"
tempfile = "3.1.0"
tokio = { version = "1.17.0", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"

[build-dependencies]
substrate-build-script-utils = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

[features]
default = ["cli"]
cli = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/rocksdb",
	"clap",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
