[package]
name = "node-executor"
version = "3.0.0-dev"
description = "Substrate node implementation in Rust."
edition = '2021'
license = "Apache-2.0"
homepage = "https://substrate.io"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = true }
scale-info = { version = "2.5.0", features = ["derive"] }
frame-benchmarking = {workspace = true, default-features = true }
node-primitives = { workspace = true, default-features = true }
node-runtime = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-state-machine = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }
sp-statement-store = { workspace = true, default-features = true }

[dev-dependencies]
criterion = "0.4.0"
futures = "0.3.21"
wat = "1.0"
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
#node-testing = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-contracts = { workspace = true, default-features = true }
pallet-im-online = {workspace = true, default-features = true }
pallet-sudo = {workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
pallet-treasury = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
sp-application-crypto = { workspace = true, default-features = true }
pallet-root-testing = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-externalities = {workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

[features]
stress-test = []

