[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/polkadot-sdk/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, features = ["derive"] }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"]}
enumflags2 = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"serde/std",
]
